k8s/bkp/07_statefulset_mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 2
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          args:
            [
              "--innodb-flush-method=O_DSYNC",
              "--innodb-use-native-aio=0",
              "--explicit_defaults_for_timestamp=1",
              "--ignore-db-dir=lost+found",
            ]
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
            - mountPath: /docker-entrypoint-initdb.d/
              name: mysql-initdb
          resources:
            requests:
              cpu: "0.05"
              memory: "200Mi"
            limits:
              cpu: "0.05"
              memory: "250Mi"
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config

  volumeClaimTemplates:
    - metadata:
        name: mysql-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
#MySQL: Criação do Banco
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
