k8s/bkp/08_deployment_phpmyadmin.yaml
#PHPMyAdmin: Criação do Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pma
  template:
    metadata:
      labels:
        app: pma
    spec:
      containers:
        - name: pma
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "250Mi"
---
#PHPMyAdmin: Criação do Service
apiVersion: v1
kind: Service
metadata:
  name: pma
spec:
  type: ClusterIP
  selector:
    app: pma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
